z-index bug in cake-jars section

--- a/mor/src/styles/cake-jar-styles.css
+++ b/mor/src/styles/cake-jar-styles.css
@@ -110,7 +110,7 @@ body{
     width: 100%;
     justify-content: center;
     margin-top: -4rem;
-    z-index: 1000;
+    z-index: 999;
 }
 
 .info-word{
